--- a/ImageEditorBundle/Resources/views/Default/menuSize.html.twig
+++ b/ImageEditorBundle/Resources/views/Default/menuSize.html.twig
@@ -2,8 +2,46 @@
 
 {% block title %}Index{% endblock %}
 
-{% block body %}
+{% block stylesheets %}
+         <link href="{{ asset('css/foundation.min.css') }}" rel="stylesheet" />
+         <link href="{{ asset('css/imgareaselect-default.css') }}" rel="stylesheet"/>
+         <script src="{{ asset('js/vendor/jquery.js') }}"></script>
+         <script src="{{ asset('js/foundation/foundation.js') }}"></script>
+         <script src="{{ asset('js/foundation/foundation.slider.js') }}"></script>
+         <script src="{{ asset('js/scripts/jquery.min.js') }}"></script>
+         <script src="{{ asset('js/scripts/jquery.imgareaselect.min.js') }}"></script>
+  
 
+{% endblock %}
+{% block body %}
+<script type="text/javascript">
+function preview(img, selection) {
+    if (!selection.width || !selection.height)
+        return;
+    
+    var scaleX = 100 / selection.width;
+    var scaleY = 100 / selection.height;
+
+    $('#preview img').css({
+        width: Math.round(scaleX * 300),
+        height: Math.round(scaleY * 300),
+        marginLeft: -Math.round(scaleX * selection.x1),
+        marginTop: -Math.round(scaleY * selection.y1)
+    });
+
+    $('#x1').val(selection.x1);
+    $('#y1').val(selection.y1);
+    $('#x2').val(selection.x2);
+    $('#y2').val(selection.y2);
+    $('#w').val(selection.width);
+    $('#h').val(selection.height);    
+}
+
+$(function () {
+    $('#photo').imgAreaSelect({handles: true,
+        fadeSpeed: 200, onSelectChange: preview });
+});
+</script>
 
 <div class="row">
 <div class="large-8 columns">
@@ -50,14 +88,60 @@
     </section>
 </nav>
 
-<img src="http://localhost/web/uploads/obrazki/{{image}}">
+<img id="photo" src="http://localhost/web/uploads/obrazki/{{image}}">
 
 </div>
 
   <div class="large-4 columns">
 {% block menu %}
 
+<form action="http://localhost/s2bs1/web/app_dev.php/img/menu/size" method="POST"
+oninput="amount.value=rangeInput.value">
 
+
+<table style="margin-top: 1em;">
+
+      <thead>
+        <tr>
+          <th colspan="2" style="font-size: 110%; font-weight: bold; text-align: left; padding-left: 0.1em;">
+            współrzędne 
+          </th>
+          <th colspan="2" style="font-size: 110%; font-weight: bold; text-align: left; padding-left: 0.1em;">
+            wymiary
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="width: 10%;"><b>X<sub>1</sub>:</b></td>
+              <td style="width: 30%;"><input type="text" id="x1" value="-" name="x1"/></td>
+              <td style="width: 20%;"><b>Width:</b></td>
+
+            <td><input type="text" value="-" id="w" /></td>
+        </tr>
+        <tr>
+          <td><b>Y<sub>1</sub>:</b></td>
+          <td><input type="text" id="y1" value="-" name="y1"/></td>
+          <td><b>Height:</b></td>
+          <td><input type="text" id="h" value="-" /></td>
+        </tr>
+        <tr>
+          <td><b>X<sub>2</sub>:</b></td>
+          <td><input type="text" id="x2" value="-" name="x2" /></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><b>Y<sub>2</sub>:</b></td>
+
+          <td><input type="text" id="y2" value="-" name="y2" /></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  <input type="submit">
+</form>
 {% endblock %}
 
 
