--- a/ImageEditorBundle/Resources/views/base.html.twig
+++ b/ImageEditorBundle/Resources/views/base.html.twig
@@ -35,11 +35,9 @@ $(document).on('opened.fndtn.reveal', '[data-reveal]', function () {
 
 <div class="nav-bar right">
 <ul class="button-group">
-<li><a href="http://localhost/s2bs1/web/app_dev.php/img/main" class="button">Home</a></li>
-<li><a href="http://localhost/s2bs1/web/app_dev.php/img/menu/size" class="button">Wymiarowanie</a></li>
-<li><a href="http://localhost/s2bs1/web/app_dev.php/img/contrast" class="button">Kontrast</a></li>
-<li><a href="http://localhost/s2bs1/web/app_dev.php/img/menu" class="button">Menu</a></li>
-
+<li><a href="http://localhost/s2bs1/web/app_dev.php/img/main" class="button">Wrzuć nowe zdjęcie</a></li>
+<li><a href="http://localhost/s2bs1/web/app_dev.php/img/menu" class="button">Edytuj</a></li>
+<li><a href="http://localhost/s2bs1/web/app_dev.php/img/save" class="button">Zapisz zdjęcie</a></li>
 <li><a href="http://localhost/s2bs1/web/app_dev.php/administrator/email" class="button">Kontakt</a></li>
 
 </ul>
@@ -55,8 +53,7 @@ $(document).on('opened.fndtn.reveal', '[data-reveal]', function () {
             <div class="large-12 columns">
                 <div class="panel">
               
-    </div>
-</div>
+
 
              {% block body %}
 
